--- a/SwiftImageUploader/Party.storyboard
+++ b/SwiftImageUploader/Party.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="sAa-Fg-s0L">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,6 +16,14 @@
                     <view key="view" contentMode="scaleToFill" id="MrZ-lU-61K">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hello Juan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ddE-OD-x3k">
+                                <rect key="frame" x="211" y="346" width="81" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
@@ -27,23 +36,54 @@
             <objects>
                 <collectionViewController id="Qac-Zj-22L" customClass="PartyViewController" customModule="SwiftImageUploader" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="9Fu-YK-45K">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="S0j-1P-oST">
-                            <size key="itemSize" width="50" height="50"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="3" minimumInteritemSpacing="3" id="S0j-1P-oST">
+                            <size key="itemSize" width="200" height="200"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="vmx-8R-mn4">
-                                <rect key="frame" x="0.0" y="64" width="50" height="50"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PartyCell" id="vmx-8R-mn4" customClass="PartyCollectionCell" customModule="SwiftImageUploader" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="64" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="7372fae1ae10b8cd4336e2843e74148d" translatesAutoresizingMaskIntoConstraints="NO" id="R2Q-Gs-7Xt">
+                                            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IGQ-OK-qdu">
+                                            <rect key="frame" x="8" y="171" width="184" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <constraints>
+                                    <constraint firstItem="R2Q-Gs-7Xt" firstAttribute="top" secondItem="vmx-8R-mn4" secondAttribute="top" id="42v-35-rfj"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="IGQ-OK-qdu" secondAttribute="trailing" id="E1w-gz-wtM"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="IGQ-OK-qdu" secondAttribute="bottom" id="NNg-lb-aoj"/>
+                                    <constraint firstAttribute="trailing" secondItem="R2Q-Gs-7Xt" secondAttribute="trailing" id="YoW-Sx-rgx"/>
+                                    <constraint firstItem="IGQ-OK-qdu" firstAttribute="leading" secondItem="vmx-8R-mn4" secondAttribute="leadingMargin" id="a3r-pb-NL5"/>
+                                    <constraint firstAttribute="bottom" secondItem="R2Q-Gs-7Xt" secondAttribute="bottom" id="vc1-SV-LOQ"/>
+                                    <constraint firstItem="R2Q-Gs-7Xt" firstAttribute="leading" secondItem="vmx-8R-mn4" secondAttribute="leading" id="wte-yY-r5D"/>
+                                    <constraint firstItem="IGQ-OK-qdu" firstAttribute="top" secondItem="vmx-8R-mn4" secondAttribute="topMargin" id="y8l-DV-dSo"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="y8l-DV-dSo"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <outlet property="partyImage" destination="R2Q-Gs-7Xt" id="aV0-29-25h"/>
+                                    <outlet property="title" destination="IGQ-OK-qdu" id="J1K-t2-GHb"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -52,6 +92,7 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="IaE-Pf-B3i"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yOS-4B-1cC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -87,4 +128,7 @@
             <point key="canvasLocation" x="-959" y="-153"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="7372fae1ae10b8cd4336e2843e74148d" width="500" height="500"/>
+    </resources>
 </document>
